TEST_PROGRAMS/INVALID/Haitong_Yang/multiAssign.min
#parsing error : multiple assignment

var x : float;
var y: float;

x=y=7.1;

